<resources>
    <string name="app_name">Fridgerator</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <!-- Start Activity Fragment Start -->
    <string name="button_search">Rezept suchen</string>
    <string name="button_random">Zufallsrezept</string>
    <string name="button_create">Rezept anlegen</string>
    <string name="button_liste">Einkaufsliste</string>
    <string name="button_impressum">Impressum</string>

    <!-- SearchRecipeActivity-->
    <string name="errorMessage">Du kannst nicht mehr als 2 Zutaten angeben!</string>

    <!-- Search Activity Fragment Search -->
    <string name="title_search">Suche</string>
    <string name="add_condiment">Gebe eine Zutat ein</string>
    <string name="add">+</string>
    <string name="title_activity_search_recipe">Fridgerator</string>
    <string name="button_search_start">Go!</string>


    <!-- Found Activity content_found -->
    <string name="title_found">Ein Gericht mit:</string>
    <string name="title_activity_found_recipes">Fridgerator</string>

    <!-- Create Activity content_create -->
    <string name="title_activity_create_recipe">Rezept anlegen</string>
    <string name="add_recipeName">Name des Rezepts</string>
    <string name="add_ingredientName">Zutat eingeben</string>
    <string name="ingredients_list">Zutatenliste</string>
    <string name="Einkaufsliste_Headline">Meine Einkaufsliste</string>
    <string name="SignInTitle">Sign In</string>
    <string name="buttonLogIn">Log In</string>
    <string name="checkBoxVegetarianText">vegetarisch</string>
    <string name="checkBoxVeganText">vegan</string>
    <string name="buttonCreateText">Anlegen</string>


    <string-array name="recipeType_array">
        <item>Hauptgericht</item>
        <item>Vorspeise</item>
        <item>Nachspeise</item>
        <item>Salat</item>
        <item>Suppe</item>
    </string-array>
    <string name="title_activity_details">Fridgerator</string>


    <!-- Create Activity details content -->
    <string name="IngredientsHeadline">Benötigte Zutaten:</string>
    <string name="ProceedingHeadline">Beschreibung:</string>

    <!-- Fragment IngredientsAddedFragment -->
    <string name="deleteMessage">Eintrag löschen?</string>
    <string name="confirmDeleteButton">ok</string>

</resources>