<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:id="@+id/buttonSearch"
            android:layout_weight="0.10"
            android:onClick="startSearch"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_random"
            android:id="@+id/buttonRandom"
            android:layout_weight="0.10"
            android:onClick="startRandom"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:id="@+id/buttonCreate"
            android:layout_weight="0.10"
            android:onClick="startCreate"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_liste"
            android:id="@+id/buttonEinkaufsliste"
            android:layout_weight="0.10"
            android:onClick="startEinkaufsliste"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_impressum"
            android:id="@+id/button_Impressum"
            android:layout_weight="0.10"
            android:onClick="startImpressum"/>

    </LinearLayout>
</LinearLayout>
