<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_search"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fridge.tobi.fridgerator.Fragments.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_search"
            android:id="@+id/textViewSearch"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_action_bar_stacked_max_height" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/zutat"
                android:layout_weight ="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_condiment"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:onClick="addIngredient"
                android:id="@+id/button_add1" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_search_start"
                android:id="@+id/button_search_go"
                android:layout_gravity="center_horizontal|bottom"
                android:onClick="searchRecipes"/>
        </FrameLayout>

    </LinearLayout>

</FrameLayout>
